# azure-rust-app

./: Cargo.toml  Dockerfile  README.md  deployment.bicep  init_container.sh
src/: api.rs  main.rs
src/hooks/: ado.rs  mod.rs
templates/: hello.html.tera  index.html.tera
