[package]
name = "axum-app"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["tower-log", "form", "macros"] }
azure_core = "0.11.0"
azure_identity = "0.11.0"
chrono = { version = "0.4.26", features = ["serde"] }
reqwest = "0.11.18"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.1", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = { version = "2.4.0", features = ["serde"] }
uuid = { version = "1.3.4", features = ["serde"] }
